style.css
/* 1. Base/Light Theme */
:root {
  --bg-color: #eee8e3;
  --main-color: #061a2b;
}

/* 2. Dark Theme Override */
@media (prefers-color-scheme: dark) {
  :root {
    --main-color: #dfdad6;
    --bg-color: #20242d;
  }
}

html {
  height: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-size: 12px;
  height: 100%;
  display: flex;
  flex-direction: column;
  font-family: "Cormorant Infant";
  font-weight: bold;
  background-color: var(--bg-color);
  color: var(--main-color);
}

p {
  margin: 0px;
  justify-content: center;
}

#newtitle {
  margin-left: 0.5rem;
  margin-top: -0.3rem;
  opacity: 0.2;
}

#newtitle:hover {
  opacity: 0.8;
  cursor: pointer;
}

#root {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 4rem;
  overflow: hidden;
}

#text {
  margin-top: -2.7em;
  min-width: 50%;
  max-width: 800px;
  display: flex;
  /*
  justify-content: center;
  align-items: center;
  */
  flex-direction: column;
  overflow: hidden;
  position: absolute;
}

#header {
  position: sticky;
  top: 0;
  width: 100%;
  padding: 1em;
  display: flex;
  justify-content: flex-end;
  gap: 1em;
  opacity: 0;
  transition: opacity 2s ease;
}

.title-container {
  margin-top: -0.2em;
  font-size: 2rem;
  flex: 1;
  display: flex;
}

.button {
  font-size: 2rem;
  display: inline-block;
  border: 2px solid black;
  border-radius: 7px;
  padding: 0px 0.4rem;
  top: 0.2rem;
  position: relative;
  line-height: 1.4rem;
  cursor: pointer;
  /*! margin-top: ; */
}
.button:hover {
  color: var(--bg-color);
  background: var(--main-color);
}

#header:hover {
  opacity: 1;
  transition: opacity 0.2s ease;
}

.first-load {
  animation: extraSlowFadeOut 5s forwards;
}

@keyframes extraSlowFadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

#title {
  outline: none;
  min-width: 100px;
  text-align: center;
}

.input {
  justify-content: center;
  text-align: left;
}

.old-input {
  /*
  animation: 
  fadeVert 8.5s ease-out forwards
  ;
  max-height: var(--original-height);
  */
}

.input span {
  outline: none;
  display: inline-block;
  text-align: left;
  max-height: 1em;
  overflow-x: clip;
}

.fade {
  animation: fadeOut 8.5s ease-out forwards;
  vertical-align: top;
  max-width: var(--original-width);
}

@keyframes fadeVert {
  60% {
    height: var(--original-height);
  }
  100% {
    height: 0px;
  }
}

@keyframes fadeOut {
  25% {
    opacity: 1;
  }
  60% {
    opacity: 0.1;
    background: none;
    /*max-width: var(--original-width);*/
  }
  100% {
    opacity: 0;
    /*background: red;*/
    /*max-width: 0px;*/
  }
}

* {
  box-sizing: border-box;
}

